--- a/packages/did-id-create/package.json
+++ b/packages/did-id-create/package.json
@@ -74,7 +74,7 @@
   "devDependencies": {
     "@size-limit/preset-small-lib": "^7.0.5",
     "@trustcerts/config-local": "^0.4.9",
-    "@trustcerts/observer": "^0.4.6",
+    "@trustcerts/observer": "^0.4.8",
     "@trustcerts/wallet": "^0.4.9",
     "@types/axios": "^0.14.0",
     "husky": "^7.0.4",
@@ -84,9 +84,8 @@
     "typescript": "^4.5.4"
   },
   "dependencies": {
-    "@trustcerts/core": "^0.4.7",
-    "@trustcerts/gateway": "^0.4.6",
-    "@trustcerts/observer": "^0.4.6"
+    "@trustcerts/core": "^0.4.9",
+    "@trustcerts/gateway": "^0.4.8"
   },
   "gitHead": "9cc3c3d078fe46729a72961bc6bd241667d43309"
 }
