--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "release:canary": "lerna publish --canary",
     "install:pages": "lerna bootstrap --scope smoke-test-react --include-dependencies",
     "build:pages": "rm -rf ./docs/smoke-test-react && lerna run build:smoke-test-react",
-    "update": "lernaupdate",
+    "update": "lernaupdate"
   },
   "repository": {
     "type": "git",
