--- a/.github/workflows/checks.yaml
+++ b/.github/workflows/checks.yaml
@@ -43,7 +43,7 @@ jobs:
           ./build.sh
 
       - name: TrustCerts Custom Blockchain
-        uses: trustcerts/blockchain-custom-action@main
+        uses: trustcerts/blockchain-custom-action@v1.0.1
 
 
       - name: Start trustcreator and platform services
