--- a/.github/workflows/checks.yaml
+++ b/.github/workflows/checks.yaml
@@ -44,7 +44,8 @@ jobs:
 
       - name: TrustCerts Custom Blockchain
         uses: trustcerts/blockchain-custom-action@main
-
+        with:
+          did: did:trust:tc:dev:id:XLzBJd69tqEgq7oqqdEsHW
 
       - name: Start trustcreator and platform services
         run: |
